--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^18.0.3",
     "concurrently": "^6.2.0",
     "cypress": "^14.4.1",
+    "cypress-real-events": "^1.14.0",
     "dotenv": "^16.0.1",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4",
