--- a/apps/Client/tsconfig.json
+++ b/apps/Client/tsconfig.json
@@ -17,7 +17,8 @@
     "jsx": "react-jsx",
     "paths": {
       "axios": ["./node_modules/axios/index.d.ts"]
-    }
+    },
+    "types": ["vite-plugin-pwa/client"]
   },
 
   "include": ["src"],
